[tool.poetry]
name = "medical-image-classification"
version = "0.1.0"
description = ""
authors = ["carl-lange <carlantonlange@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
pillow = "^10.4.0"
torch = "^2.6.0"
torchvision = "0.21.0"
torchinfo = "^1.8.0"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.black]
line-length = 140
target-version = ['py312']



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
